test/negative/unary-weakuntil02.cfr
// Test for negative weakuntil constraint

a
 b ?
  c ?
  d ?
  [c weakuntil ]


// Fail to parse as expected 
